add code highlighting to overview

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -810,6 +810,7 @@ code .line {
   background: transparent;
   transition: background .15s;
   position: relative;
+  padding: 1px 0;
 }
 
 code .line:before {
