--- a/docs/templates/handle-error.njk
+++ b/docs/templates/handle-error.njk
@@ -9,7 +9,7 @@ By default, if an error is thrown somewhere in a reactive flow, the whole flow o
 <span code>handleError()</span> allows you to catch errors and handle them gracefully:
 
 <pre try="https://stackblitz.com/edit/connective-he-ex1">
-  <code class="javascript">import { source, map, handleError } from '@connectv/core';
+  <code class="javascript">/*!*/import { source, map, handleError } from '@connectv/core';
 
 let a = source();
 
@@ -18,7 +18,7 @@ let a = source();
 //--&gt; out after an error occurs..
 //
 a.to(map(x =&gt; {
-  if (x == 2) throw new Error();
+/*!*/  if (x == 2) throw new Error();
   else return x;
 })).subscribe(v =&gt; console.log('A:: ' + v));
 
@@ -26,12 +26,12 @@ a.to(map(x =&gt; {
 //--&gt; this flow has error handling, so it will continue after
 //--&gt; an error occurs.
 //
-let h = handleError();
+/*!*/let h = handleError();
 a.to(map(x =&gt; {
   if (x == 2) throw new Error();
   else return x;
-})).to(h.input);
-h.output.subscribe(v =&gt; console.log('B:: ' + v));
+/*!*/})).to(h.input);
+/*!*/h.output.subscribe(v =&gt; console.log('B:: ' + v));
 
 a.send(1);  //--&gt; logged by both
 a.send(2);  //--&gt; ignored by both
@@ -43,10 +43,10 @@ a.send(3);  //--&gt; logged by 'B:: ' only, since 'A:: ' flow is dead.</code>
 You can access thrown errors using <span code>.error</span> (or <span code>.out("error")</span>):
 
 <pre try="https://stackblitz.com/edit/connective-he-ex2">
-  <code class="javascript">import { source, map, group, handleError } from '@connectv/core';
+  <code class="javascript">/*!*/import { source, map, group, handleError } from '@connectv/core';
 
 let a = source();
-let h = handleError();
+/*!*/let h = handleError();
 a.to(map(x =&gt; {
   if (x == 2) throw new Error();
   else return x;
@@ -54,8 +54,8 @@ a.to(map(x =&gt; {
 
 group(
   h.output,                                         //--&gt; the usual output
-  h.error                                           //--&gt; the error output,
-    .to(map(e =&gt; `error for  ${e.emission.value}`)) //... lets make it presentable
+/*!*/  h.error                                           //--&gt; the error output,
+/*!*/    .to(map(e =&gt; `error for  ${e.emission.value}`)) //... lets make it presentable
 ).subscribe(console.log);
 
 a.send(1);
