--- a/docs/templates/map.njk
+++ b/docs/templates/map.njk
@@ -14,12 +14,12 @@
 The function can be a simple synchronous function, in which case it should take only one argument:
 
 <pre try="https://stackblitz.com/edit/connective-map-ex1">
-  <code class="javascript">import { source, spread, map } from '@connectv/core';
+  <code class="javascript">/*!*/import { source, spread, map } from '@connectv/core';
 
 let a = source();
 
 a.to(spread())             //--&gt; spread incoming array as multiple emissions
- .to(map(x =&gt; x * 2))      //--&gt; multiply each number by 2
+/*!*/ .to(map(x =&gt; x * 2))      //--&gt; multiply each number by 2
  .subscribe(console.log);  //--&gt; log it
 
 a.send([1, 2, 3, 4]);
@@ -29,14 +29,14 @@ a.send([10, 20, 30, 40]);</code>
 Or it can be an asynchronous function, in which case it should take a callback as second argument:
 
 <pre try="https://stackblitz.com/edit/connective-map-ex2">
-  <code class="javascript">import { source, spread, map } from '@connectv/core';
+  <code class="javascript">/*!*/import { source, spread, map } from '@connectv/core';
 
 let a = source();
 
 a.to(spread())
- .to(map((x, done) =&gt; {
-   setTimeout(() =&gt; done(x * 2), x * 100);  //--&gt; multiply by 2 and respond after a bit
- }))
+/*!*/ .to(map((x, done) =&gt; {
+/*!*/   setTimeout(() =&gt; done(x * 2), x * 100);  //--&gt; multiply by 2 and respond after a bit
+/*!*/ }))
  .subscribe(console.log);
 
 a.send([4, 2, 1, 3, 8, 5, 7]);              //--&gt; notice how the order is not preserved</code>
@@ -54,14 +54,14 @@ In a sync map function, you can simply throw the errors that occur:
 let a = source();
 
 a.to(map(x =&gt; {
-   if (x == 2) throw new Error('No 2s pls.');
+/*!*/   if (x == 2) throw new Error('No 2s pls.');
    return x + 3;
  }))
  .subscribe(
    console.log,    //--&gt; log the ok values
-   error =&gt; {      //--&gt; handle the errors
-     console.log('ERROR:: ' + error.original.message);
-   }
+/*!*/   error =&gt; {      //--&gt; handle the errors
+/*!*/     console.log('ERROR:: ' + error.original.message);
+/*!*/   }
  );
 
 a.send(5);
@@ -80,14 +80,14 @@ let brokenPromise = new Promise((resolve, reject) =&gt; {
   reject('For no particular reason');
 });
 
-a.to(map((x, done, error) =&gt; {
-  brokenPromise
-    .then(() =&gt; done(x))
-    .catch(e =&gt; error(e));
-}))
+/*!*/a.to(map((x, done, error) =&gt; {
+/*!*/  brokenPromise
+/*!*/    .then(() =&gt; done(x))
+/*!*/    .catch(e =&gt; error(e));
+/*!*/}))
 .subscribe(
   () =&gt; {},                            //--&gt; ignore good values
-  e =&gt; console.log(e.original.message) //--&gt; log the errors
+/*!*/  e =&gt; console.log(e.original.message) //--&gt; log the errors
 );
 
 a.send();</code>
