--- a/docs/templates/source.njk
+++ b/docs/templates/source.njk
@@ -8,15 +8,15 @@
 You can use <span code>source()</span> to manually send events/data to your reactive flows:
 
 <pre try="https://stackblitz.com/edit/connective-src-ex1">
-  <code class="javascript">import { source, map, group } from '@connectv/core';
+  <code class="javascript">/*!*/import { source, map, group } from '@connectv/core';
 
-let a = source();
-let b = source();
+/*!*/let a = source();
+/*!*/let b = source();
 
 group(a, b).to(map(v =&gt; 'from:: ' + v)).subscribe(console.log);
 
-a.send('A');
-b.send('B');
+/*!*/a.send('A');
+/*!*/b.send('B');
 
 setInterval(() =&gt; a.send('A'), 1000);
 document.addEventListener('click', () =&gt; b.send('B'));</code>
@@ -40,12 +40,12 @@ a.to(pin())
  .subscribe(
    v =&gt; { console.log('GOT:: ' + v); },  //--&gt; this is the usual callback
    error =&gt; { console.log('ERROR!'); },  //--&gt; this is the error callback
-   () =&gt; { console.log('COMPLETE!'); }   //--&gt; this will be called when the flow is closed off
+/*!*/   () =&gt; { console.log('COMPLETE!'); }   //--&gt; this will be called when the flow is closed off
  );
 
 a.send(12);
 a.send('YOLO!');
-a.clear();</code>
+/*!*/a.clear();</code>
 </pre>
 
 <br><br>
