--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -69,7 +69,7 @@
     <hr>
     <a href="/docs/emission">Emission and context</a>
     <hr>
-    <a href="/docs/interfaces">Interfaces</a>
+    <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
     <a href="/docs/under-the-hoold">Under the hood</a>
 
