add under the hood docs

--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -71,7 +71,7 @@
     <hr>
     <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
-    <a href="/docs/under-the-hoold">Under the hood</a>
+    <a href="/docs/under-the-hood">Under the hood</a>
 
   </div>
   <div class="search">
